--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ Waleed Ahmed:
   name        : "Waleed Ahmed"
   uri         : "https://waleed-u.github.io"
   email       : "wahmed.bese21seecs@seecs.edu.pk"
-  bio         : "Final-semester Software Engineering student at NUST, Research Assistant at TUKL-NUST Deep Learning Lab, passionate about Explainable AI and Machine Learning"
+  bio         : "Recent Software Engineering Graduate passionate about AI, Machine Learning, and Software Development"
   avatar      : "bio-photo.jpg"
   github      : "waleed-u"
   linkedin    : "waleed-u"
