Improve mobile responsiveness and clean up profile display
- Remove pronouns and bio text from profile sidebar (both desktop and mobile)
- Enhance mobile layout with enlarged profile photo (150px on mobile, 180px on tablet)
- Redesign mobile social buttons with modern pill-shaped design
- Center profile photo and social links on mobile devices
- Add smooth hover animations for social buttons
- Hide location and employer info on mobile for cleaner look
- Improve spacing and visual hierarchy for mobile users
- Ensure responsive design works across all screen sizes

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   # Biographic information
   avatar           : "bio-photo.jpg"
   name             : "Waleed Ahmed"
-  pronouns         : "He/Him"  
-  bio              : "Recent Software Engineering Graduate passionate about AI, Machine Learning, and Software Development"
+  pronouns         : # "He/Him"  
+  bio              : # "Recent Software Engineering Graduate passionate about AI, Machine Learning, and Software Development"
   location         : "Islamabad, Pakistan"
   employer         : "Huawei Pakistan"
   uri              : # URL
