--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "CV"
-    url: /cv/
+  - title: "Research"
+    url: /research/
     
   - title: "Achievements"
     url: /achievements/
@@ -17,5 +17,8 @@ main:
   - title: "Projects"
     url: /projects/
     
-  - title: "Research"
-    url: /research/
+  - title: "CV"
+    url: /cv/
+    
+  - title: "Gallery"
+    url: /gallery/
